--- a/BaseLibrary/build.gradle
+++ b/BaseLibrary/build.gradle
@@ -1,31 +1,30 @@
-apply plugin: 'com.android.application'
-
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'com.jfrog.bintray'
 
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.hysea.library"
         minSdkVersion 21
         targetSdkVersion 27
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            buildConfigField 'String','API_SERVER_URL',''
-        }
-
-        debug {
-            buildConfigField 'String','API_SERVER_URL',''
         }
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -48,6 +47,81 @@ dependencies {
     implementation 'com.gyf.barlibrary:barlibrary:2.3.0'
     implementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
     implementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
+}
 
+def siteUrl = 'https://github.com/hysea/BaseLibrary' // 项目的主页
+def gitUrl = 'https://github.com/hysea/BaseLibrary.git' // Git仓库的url
+group = "com.hysea.library" //一般填你唯一的包名
+version = "1.0.0"//项目引用的版本号
+//gradlew bintrayUpload
+install {
+    repositories.mavenInstaller {
+        // This generates POM.xml with proper parameters
+        pom {
+            project {
+                packaging 'aar'
+                // Add your description here项目描述
+                name 'BaseLibrary'
+                url siteUrl
+                licenses {
+                    license {
+                        name 'The Apache Software License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+                developers {
+                    developer {//填写的一些基本信息
+                        id 'hysealive'
+                        name 'hysealive'
+                        email 'hysealive@163.com'
+                    }
+                }
+                scm {
+                    connection gitUrl
+                    developerConnection gitUrl
+                    url siteUrl
+                }
+            }
+        }
+    }
+}
+task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier = 'sources'
+}
 
+task javadoc(type: Javadoc) {
+    source = android.sourceSets.main.java.srcDirs
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+//    archives javadocJar
+}
+
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+bintray {
+    //读取Bintray帐号和密码。
+    //一般的为了保密和安全性，在项目的local.properties文件中添加两行句话即可：
+    //bintray.user=username
+    //bintray.apikey=apikey
+//    user = properties.getProperty("bintray.user")
+//    key = properties.getProperty("bintray.apikey")
+    key = "b2b28057cd5288dda34dffc64c3f55930ad9bc52"
+    user = "hysea"
+    configurations = ['archives']
+    pkg {
+        repo = "maven"
+        name = "BaseLibrary"    //发布到JCenter上的项目名字
+        websiteUrl = siteUrl
+        vcsUrl = gitUrl
+        licenses = ["Apache-2.0"]
+        publish = true
+    }
 }
