--- a/BaseLibrary/build.gradle
+++ b/BaseLibrary/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'com.novoda.bintray-release'
 android {
     compileSdkVersion 27
     defaultConfig {
-        minSdkVersion 21
+        minSdkVersion 19
         targetSdkVersion 27
         versionCode 1
         versionName "1.0.0"
@@ -26,11 +26,10 @@ android {
 
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
-
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -42,10 +41,14 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-12'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.41'
     implementation 'com.gyf.barlibrary:barlibrary:2.3.0'
-    implementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
-    implementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
+    debugImplementation  'com.squareup.leakcanary:leakcanary-android:1.6.1'
+    releaseImplementation  'com.squareup.leakcanary:leakcanary-android-no-op:1.6.1'
+    implementation files('libs/tbs_sdk_thirdapp_v3.6.0.jar')
 }
 
 
