--- a/BaseLibrary/src/main/AndroidManifest.xml
+++ b/BaseLibrary/src/main/AndroidManifest.xml
@@ -26,6 +26,27 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
+
+        <!-- 屏幕适配方案 -->
+        <meta-data
+            android:name="design_width_in_dp"
+            android:value="360" />
+        <meta-data
+            android:name="design_height_in_dp"
+            android:value="640" />
+
+        <!-- 适配全面屏 Android O vivo&oppo-->
+        <meta-data
+            android:name="android.max_aspect"
+            android:value="2.2" />
+        <!-- 适配刘海屏、水滴屏 Android O 小米 -->
+        <meta-data
+            android:name="notch.config"
+            android:value="portrait|landscape" />
+        <!-- 适配刘海屏、水滴屏 Android O 华为 -->
+        <meta-data
+            android:name="android.notch_support"
+            android:value="true" />
     </application>
 
 </manifest>
