--- a/BaseLibrary/src/main/AndroidManifest.xml
+++ b/BaseLibrary/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/AppTheme">
 
         <provider
@@ -30,10 +31,10 @@
         <!-- 屏幕适配方案 -->
         <meta-data
             android:name="design_width_in_dp"
-            android:value="360" />
+            android:value="375" />
         <meta-data
             android:name="design_height_in_dp"
-            android:value="640" />
+            android:value="667" />
 
         <!-- 适配全面屏 Android O vivo&oppo-->
         <meta-data
